[package]
name = "rust-ethereum-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.28.2", features = ["rand"] }
keccak-hash = "0.10.0"
rand = "0.8.5"
hex = "0.4.3"
serde_json = { version = "1.0.113", features = [] }
serde = { version = "1.0.196", features = ["derive"] }
chrono = { version = "0.4.33", features = [] }
aes = "0.8.3"
block-modes = "0.9.1"
block-padding = "0.3.3"
scrypt = "0.11.0"
ctr = "0.9.2"
cipher = "0.4.4"
hex-literal = "0.4.1"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
pbkdf2 = "0.12.2"
sha2 = "0.10.8"



# mdbx 너무 어렵다
